--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
 		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="icone de flèche droite">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<div class="dots">
-			<!-- <div class="dot dot_selected"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div> -->
-		</div>
+		<div class="dots"></div>
 	</div>
 	<section id="about-us" class="container">
 		<div>
